[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../../"
git_describe_command= 'git describe --tags --abbrev=0 --dirty --match "sunra_client_v*"'
tag_regex = "^sunra_client_v(?P<version>.*)$"

[project]
name = "sunra_client"
version = "0.2.2"
description = "Python client for sunra.ai"
readme = "README.md"
authors = [{ name = "Features & Labels <support@sunra.ai>" }]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.21.0,<1",
    "httpx-sse>=0.4.0,<0.5",
    "requests",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pillow",
]
dev = [
    "sunra_client[docs,test]",
]

[project.urls]
homepage = "https://sunra.ai"
repository = "https://github.com/sunra-ai/sunra-clients"

[tool.pytest.ini_options]
testpaths = "tests/"
asyncio_mode = "auto"

[tool.setuptools]
packages = ["sunra_client"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"sunra_client" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

# Specific rules for blank lines
[tool.ruff.lint.pycodestyle]
max-line-length = 120
# E303: too many blank lines
# E304: blank line after @decorator
# E305: expected 2 blank lines after class or function definition
# W291: trailing whitespace
# W292: no newline at end of file
# W293: blank line contains whitespace

[tool.ruff.format]
# Ensure consistent line endings
line-ending = "auto"
# Use double quotes for strings
quote-style = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["sunra_client"]
